@@ -1,6 +1,8 @@
 CHANGES IN FLTK 1.1.3
 
 	- Documentation updates.
+	- The size_range() values were not honored under MacOS X.
+          [SF Bug #647074]
 	- OpenGL windows didn't resize correctly on MacOS X.
           [SF Bug #667855]
 	- The menus incorrectly used the overlay visual when one
